--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,10 @@
 						<li class="dropdown">
 							<a href="guide.html" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-star" aria-hidden="true" lang_self> starter_guide </span><strong class="caret"></strong></a>
                             <ul class="dropdown-menu">
-
+                                <li>
+                                    <a href="guide.html" lang_self> starter_guide</a>
+                                </li>
+                                <li class="divider"></li>
                                 <li>
                                     <a href="guide.html#support" lang_self> starter_guide1</a>
                                 </li>
@@ -58,6 +61,10 @@
 							<a href="obtain.html" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-road" aria-hidden="true" lang_self>obtain_note</span><strong class="caret"></strong></a>
                             <ul class="dropdown-menu">
                                 <li>
+                                    <a href="obtain.html" lang_self> obtain_note</a>
+                                </li>
+                                <li class="divider"></li>
+                                <li>
                                     <a href="obtain.html#free" lang_self> obtain_note2</a>
                                 </li>
                                 <li>
@@ -68,14 +75,80 @@
                                 </li>
                             </ul>
 						</li>
-						<li>
-							<a href="userguide.html"><span class="glyphicon glyphicon-book" aria-hidden="true" lang_self>user_guide</span></a>
+						<li class="dropdown">
+							<a href="userguide.html" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-book" aria-hidden="true" lang_self>user_guide</span><strong class="caret"></strong></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="userguide.html" lang_self> user_guide</a>
+                                </li>
+                                <li class="divider"></li>
+                                <li>
+                                    <a href="userguide.html#user_guide1" lang_self> user_guide1</a>
+                                </li>
+                                <li>
+                                    <a href="userguide.html#user_guide2" lang_self> user_guide2</a>
+                                </li>
+                                <li>
+                                    <a href="userguide.html#user_guide3" lang_self> user_guide3</a>
+                                </li>
+                                <li>
+                                    <a href="userguide.html#user_guide4" lang_self> user_guide4</a>
+                                </li>
+                                <li>
+                                    <a href="userguide.html#user_guide5" lang_self> user_guide5</a>
+                                </li>
+                                <li>
+                                    <a href="userguide.html#user_guide6" lang_self> user_guide6</a>
+                                </li>
+                                <li>
+                                    <a href="userguide.html#user_guide7" lang_self> user_guide7</a>
+                                </li>
+                                <li>
+                                    <a href="userguide.html#user_guide8" lang_self> user_guide8</a>
+                                </li>
+                            </ul>
 						</li>
-						<li>
-							<a href="features.html"><span class="glyphicon glyphicon-list" aria-hidden="true" lang_self>feat_ures</span></a>
+						<li class="dropdown">
+							<a href="features.html" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-list" aria-hidden="true" lang_self>feat_ures</span><strong class="caret"></strong></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="features.html" lang_self> feat_ures</a>
+                                </li>
+                                <li class="divider"></li>
+                                <li>
+                                    <a href="features.html#feat_ures1" lang_self> feat_ures1</a>
+                                </li>
+                                <li>
+                                    <a href="features.html#feat_ures2" lang_self> feat_ures2</a>
+                                </li>
+                                <li>
+                                    <a href="features.html#feat_ures3" lang_self> feat_ures3</a>
+                                </li>
+                                <li>
+                                    <a href="features.html#feat_ures4" lang_self> feat_ures4</a>
+                                </li>
+                            </ul>
 						</li>
-						<li>
-							<a href="faqs.html"><span class="glyphicon glyphicon-question-sign" aria-hidden="true" lang_self>common_question</span></a>
+						<li class="dropdown">
+							<a href="faqs.html" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-question-sign" aria-hidden="true" lang_self>common_question</span><strong class="caret"></strong></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="faqs.html" lang_self> common_question</a>
+                                </li>
+                                <li class="divider"></li>
+                                <li>
+                                    <a href="faqs.html#common_question1" lang_self> common_question1</a>
+                                </li>
+                                <li>
+                                    <a href="faqs.html#common_question2" lang_self> common_question2</a
+                                </li>
+                                <li>
+                                    <a href="faqs.html#common_question3" lang_self> common_question3</a>
+                                </li>
+                                <li>
+                                    <a href="faqs.html#common_question4" lang_self> common_question4</a>
+                                </li>
+                            </ul>
 						</li>
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-globe" aria-hidden="true" lang_self>change_language</span><strong class="caret"></strong></a>
